# fdk-kafka-event-publisher

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/: dependabot.yaml
.github/workflows/: deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-concept-event-publisher.yaml  deployment-fdk-data-service-event-publisher.yaml  deployment-fdk-dataset-event-publisher.yaml  deployment-fdk-event-event-publisher.yaml  deployment-fdk-information-model-event-publisher.yaml  deployment-fdk-service-event-publisher.yaml  kustomization.yaml  service-fdk-concept-event-publisher.yaml  service-fdk-data-service-event-publisher.yaml  service-fdk-dataset-event-publisher.yaml  service-fdk-event-event-publisher.yaml  service-fdk-information-model-event-publisher.yaml  service-fdk-service-event-publisher.yaml
deploy/demo/: deployment-fdk-concept-event-publisher.yaml  deployment-fdk-data-service-event-publisher.yaml  deployment-fdk-dataset-event-publisher.yaml  deployment-fdk-event-event-publisher.yaml  deployment-fdk-information-model-event-publisher.yaml  deployment-fdk-service-event-publisher.yaml  env-fdk-concept-event-publisher.yaml  env-fdk-data-service-event-publisher.yaml  env-fdk-dataset-event-publisher.yaml  env-fdk-event-event-publisher.yaml  env-fdk-information-model-event-publisher.yaml  env-fdk-service-event-publisher.yaml  kustomization.yaml
deploy/prod/: deployment-fdk-concept-event-publisher.yaml  deployment-fdk-data-service-event-publisher.yaml  deployment-fdk-dataset-event-publisher.yaml  deployment-fdk-event-event-publisher.yaml  deployment-fdk-information-model-event-publisher.yaml  deployment-fdk-service-event-publisher.yaml  env-fdk-concept-event-publisher.yaml  env-fdk-data-service-event-publisher.yaml  env-fdk-dataset-event-publisher.yaml  env-fdk-event-event-publisher.yaml  env-fdk-information-model-event-publisher.yaml  env-fdk-service-event-publisher.yaml  kustomization.yaml
deploy/staging/: kustomization.yaml  (+12 more)
src/: error.rs  http.rs  kafka.rs  lib.rs  main.rs  metrics.rs  rabbit.rs  schema.rs  schemas.rs  utils.rs
