[package]
name = "fdk-kafka-event-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
async-trait = "0.1.74"
chrono = "0.4.37"
lapin = "2.3.1"
lazy_static = "1.4.0"
prometheus = "0.13.3"
rdkafka = "0.36.0"
reqwest = "0.12.2"
schema_registry_converter = { version = "4.0.0", features = ["avro"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.192"
serde_json = "1.0.108"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
tracing = "0.1.40"
tracing-subscriber =  { version = "0.3.17", features = ["json"] }
