[package]
name = "fdk-kafka-event-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
async-trait = "0.1.85"
chrono = "0.4.38"
lapin = "2.5.0"
lazy_static = "1.5.0"
prometheus = "0.13.4"
rdkafka = "0.36.2"
reqwest = "0.12.9"
schema_registry_converter = { version = "4.2.0", features = ["avro"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.132"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-executor-trait = "2.1.3"
tokio-reactor-trait = "1.1.0"
tracing = "0.1.40"
tracing-subscriber =  { version = "0.3.18", features = ["json"] }
